# AutomaticBoresightCalibration

./: README.md
BA/: derivatives_test.m
CalibrationAlgorithm/OLD_BoresightAlgorithm/: .cproject  .project
CalibrationAlgorithm/Project/: .cproject  .project  A_Full.txt  FinalPoints_All.txt  in_cloud.pcd  in_cloud_rotated.pcd  in_cloud_temp.pcd  merged_sc1_sc2.pcd  registered_cloud.pcd  sc1.pcd  sc2.pcd  sc2_rotated.pcd  w_Final.txt
CalibrationAlgorithm/Project/src/: CMakeLists.txt  boresight_main.cpp
CalibrationAlgorithm/Project/src/Func/: BAFunctions.cpp  BAFunctions.h  CMakeLists.txt  CalibrationFunctions.cpp  CalibrationFuntions.h  LS.cpp  LS.h  LeastSquares.cpp  LeastSquares.h
Debug_INPUT/: CrossIron_TEst.txt  MappingVec
Debug_INPUT/BackupOrientations/: Orientation1.txt  Orientation3.txt
Debug_INPUT/O1_Planes/: Cloud_Plane_0.pcd  Cloud_Plane_1.pcd  Cloud_Plane_2.pcd  Orientation.txt  PlaneEquations.txt  TestPlaneFit.ipynb  points_ground.pcd1  points_ground.txt  test_fit.py  w_output_10cm.txt  w_output_1cm.txt  w_output_1m.txt  w_output_iter.txt  w_output_original.txt
Debug_INPUT/O2_Planes/: Cloud_Plane_0.pcd  Cloud_Plane_1.pcd  Cloud_Plane_2.pcd  Orientation.txt  PlaneEquations.txt
Debug_INPUT/O3_Planes/: Cloud_Plane_0.pcd  Cloud_Plane_1.pcd  Cloud_Plane_2.pcd  Orientation.txt  PlaneEquations.txt
Debug_INPUT/O4_Planes/: Cloud_Plane_0.pcd  Cloud_Plane_1.pcd  Cloud_Plane_2.pcd  Orientation.txt  PlaneEquations.txt
FunctionalModelDerivative/: FunctionalModelDerivatives.ipynb  ddx_changed  function_derivatives.py
(+27 files in other folders)
